<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/atletaSeniorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroAtletaSenior">

    <TextView
        android:id="@+id/ra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="7dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="73dp"
        android:text="@string/ra"
        app:layout_constraintBottom_toTopOf="@+id/etNomeComum"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="91dp"
        android:text="@string/nome"
        app:layout_constraintBottom_toTopOf="@+id/etNomeComum"
        app:layout_constraintStart_toStartOf="@+id/ra"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNomeComum"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="567dp"
        android:ems="10"
        android:hint="@string/etNome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ra" />

    <EditText
        android:id="@+id/etDataNascimentoComum"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/etData_nascimento"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/cbProblemasCardiacosSenior"
        app:layout_constraintStart_toStartOf="@+id/etBairroComum"
        app:layout_constraintTop_toBottomOf="@+id/etBairroComum" />

    <EditText
        android:id="@+id/etBairroComum"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:ems="10"
        android:hint="@string/etBairro"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etDataNascimentoComum"
        app:layout_constraintStart_toStartOf="@+id/etNomeComum"
        app:layout_constraintTop_toBottomOf="@+id/etNomeComum" />

    <Button
        android:id="@+id/btnCadastrarComum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="261dp"
        android:text="@string/btnCadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/cbProblemasCardiacosSenior"
        app:layout_constraintTop_toBottomOf="@+id/cbProblemasCardiacosSenior" />

    <CheckBox
        android:id="@+id/cbProblemasCardiacosSenior"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="11dp"
        android:layout_marginBottom="33dp"
        android:text="@string/cbProblemas_cardiacos"
        app:layout_constraintBottom_toTopOf="@+id/btnCadastrarComum"
        app:layout_constraintStart_toStartOf="@+id/etDataNascimentoComum"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascimentoComum" />

</androidx.constraintlayout.widget.ConstraintLayout>